--- a/src/styles.css
+++ b/src/styles.css
@@ -58,11 +58,33 @@ body {
 }
 
 header {
+    display: flex;
+    flex-direction: column;
     text-align: center;
     box-shadow: 2px 2px 7px 5px var(--border-color);
     padding: 15px;
     font-family: "NotoSansMono", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.2rem;
+}
+
+button {
+    cursor: pointer;
+}
+
+#add-project-btn {
+    align-self: flex-end;
+    margin-right: 20px;
+    font-size: 1.2rem;
+    padding: 10px;
+    background-color: var(--todo-item-background-color);
+    border-radius: 8px;
+    border-color: var(--border-color);
+    transition: all 0.3s;
+}
+
+#add-project-btn:hover {
+    font-size: 1.22rem;
+    box-shadow: 0 0 12px 2px var(--header-background-color);
 }
 
 footer {
@@ -121,6 +143,23 @@ footer {
     border: 3px solid lightblue;
 }
 
+.todo-item > button {
+    border: none;
+    background-color: white;
+    cursor: pointer;
+    font-size: 1rem;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    padding: 5px;
+    font-size: 1.1rem;
+    letter-spacing: 1px;
+}
+
+li.todo-item:last-of-type {
+    padding: 0;
+}
+
 .project-header {
     display: flex;
     justify-content: space-between;
@@ -174,6 +213,41 @@ footer {
     font-size: 1.3em;
 }
 
+.add-todo-item-form,
+.add-project-form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: clamp(300px, 60%, 600px);
+    height: 300px;
+    position: relative;
+    font-size: 1.2rem;
+}
+
+#add-todo-item-form-close-btn,
+#add-project-form-close-btn {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    width: 40px;
+}
+
+.add-todo-item-form > div {
+    display: flex;
+    flex-direction: column;
+}
+
+.add-todo-item-form > button {
+    width: 100px;
+    align-self: center;
+    font-size: inherit;
+    cursor: pointer;
+}
+
 .hidden {
     display: none;
 }
@@ -184,6 +258,20 @@ footer {
 
 .finished {
     color: lightgreen;
+}
+
+.add-todo-item-modal,
+.add-project-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
 }
 
 .delete-button:hover,
